src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.button-primary {
    @apply px-3 py-1 text-white font-semibold bg-gradient-to-r from-fuchsia-600 to-purple-800 hover:from-fuchsia-500 hover:to-purple-700 rounded-full border border-purple-600;
}

.button-secondary {
    @apply px-3 py-1 text-white bg-slate-100/20 rounded-full hover:bg-slate-100/30 border border-white/60;
}

.border-nests-gradient {
    background: linear-gradient(to right, #212121, #212121) padding-box,
        linear-gradient(to right, #f158c0, #6e49f5) border-box;
}

